--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   english_words: ^4.0.0
   provider: ^6.1.5
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
