--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   provider: ^6.1.5
   flutter_map: ^7.0.2
   latlong2: ^0.9.0
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
