--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.0
   geolocator: ^13.0.1
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
 
 dev_dependencies:
   flutter_test:
