Fix Profile Screen structure

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,4 +34,5 @@ flutter:
   assets:
     - assets/Mobikad_Logo.png
     - assets/backgroundImage.jpg
+    - assets/Profile_Picture.jpeg
     # - assets/
