--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   geolocator: ^13.0.1
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
+  mapbox_maps_flutter: ^2.10.0
+  flutter_dotenv: ^6.0.0
+  google_maps_flutter: ^2.13.1
 
 dev_dependencies:
   flutter_test:
